--- a/Edurem/Components/ConfirmEmail.razor
+++ b/Edurem/Components/ConfirmEmail.razor
@@ -1,13 +1,15 @@
 ﻿@using MimeKit
 @using System.Net.Mail
 @using Edurem.Services
+@using Edurem.Extensions
 @inject Edurem.Services.IEmailService<MimeMessage> EmailService;
 @inject Edurem.Services.ISecurityService SecurityService;
+@inject Microsoft.Extensions.Configuration.IConfiguration Configuration;
 @inject IMatToaster Toaster;
 
 <div class="row">
     <div class="col-12">
-        <input class="form-control" style="font-size: 19px" @bind="Email" />
+        <input placeholder="Email" class="form-control" style="font-size: 19px" @bind="Email" />
     </div>
 </div>
 <div class="row mt-2 justify-content-between align-items-center">
@@ -15,7 +17,7 @@
         <a class="form-control btn btn-outline-dark @(IsSendingPerformed ? "disabled" : "")" style="font-size: 15px" @onclick="SendEmail" >Отправить</a>
     </div>
     <div class="col-7 col-lg-6 mt-2 mt-lg-0 justify-content-end">
-        <input class="form-control" style="font-size: 19px" placeholder="Код подтверждения" @bind="Password" />
+        <input placeholder="Код подтверждения" class="form-control" style="font-size: 19px" @bind="Password" />
     </div>
 </div>
 
