--- a/Edurem/Components/NavMenu.razor
+++ b/Edurem/Components/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark border-light border-bottom">
     <div class="col-5 col-md-12">
-        <a class="navbar-brand" href="/account/home">@(User.Surname + " " + User.Name)</a>
+        <a class="navbar-brand font-weight-bold" style="font-size: 20px" href="/home">@(ApplicationName)</a>
     </div>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link bg-primary" href="/logout">
+            <NavLink style="color: white" class="nav-link bg-primary" href="/logout">
                 <i class="fas fa-sign-out-alt mr-2"></i> Выйти
             </NavLink>
         </li>
@@ -43,6 +43,6 @@
     }
 
     [Parameter]
-    public User User { get; set; }
+    public string ApplicationName { get; set; }
 
 }
