Добавлена возможность создавать группы и выводить их списком

--- a/Edurem/Components/NavMenu.razor
+++ b/Edurem/Components/NavMenu.razor
@@ -10,7 +10,7 @@
 <div class="@NavMenuCssClass">
     <ul class="nav flex-column">
         <li class="nav-item px-3">
-            <NavLink class="ml-1 nav-link" href="#">
+            <NavLink class="ml-1 nav-link" href="/account/groups">
                 <i class="fas fa-users mr-2"></i> Группы
             </NavLink>
         </li>
