--- a/Edurem/Views/Account/Groups.cshtml
+++ b/Edurem/Views/Account/Groups.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Edurem.Components;
-@model Edurem.ViewModels.GroupsListViewModel
+@model Edurem.ViewModels.AccountViewModel<Edurem.ViewModels.GroupsListViewModel>
 
 @{
     ViewData["Title"] = "Группы";
@@ -16,13 +16,13 @@
             <input type="button" value="Создать группу" class="col-3 col-md-4 col-xl-2 btn btn-success text-center"
                    onclick="window.location='@Url.Action("CreateGroup", "Account")'" />
         </div>
-        @if (Model.GroupsForView.Count == 0)
+        @if (Model.ViewModel.GroupsForView.Count == 0)
         {
             <div class="row justify-content-center mt-4">
                 <h3 class="text-muted text-center mt-4">Группы не найдены</h3>
             </div>
         }
-        @foreach (var group in Model.GroupsForView)
+        @foreach (var group in Model.ViewModel.GroupsForView)
         {
             <div class="row justify-content-center mt-4">
                 <div class="col-12 col-lg-10 card">
@@ -32,36 +32,23 @@
                     <div class="card-body">
                         <div class="row justify-content-center">
                             <div class="col-11">
-                                <div class="row">
-                                    <div class="col-4 text-right">
-                                        <p><b>Количество участников</b>:</p>
+                                @foreach (var info in group.GroupInfo)
+                                {
+                                    <div class="row">
+                                        <div class="col-4 text-right">
+                                            <p><b>@info.Key</b>:</p>
+                                        </div>
+                                        <div class="col-8 text-left">
+                                            <p>@info.Value</p>
+                                        </div>
                                     </div>
-                                    <div class="col-8 text-left">
-                                        <p>@group.MembersCount</p>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-4 text-right">
-                                        <p><b>Вы</b>:</p>
-                                    </div>
-                                    <div class="col-8 text-left">
-                                        @if (group.UserRole == RoleInGroup.ADMIN)
-                                        {
-                                            <p>Администратор</p>
-                                        }
-                                        else
-                                        {
+                                }
 
-                                        }
-                                    </div>
-                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         }
-
-
     </div>
 </div>
