--- a/Edurem/Views/Administration/Login.cshtml
+++ b/Edurem/Views/Administration/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model Edurem.ViewModels.LoginViewModel
+﻿@model Edurem.ViewModels.LoginEditModel
 
 @{
     ViewData["Title"] = "Войти в систему";
