--- a/Edurem/Views/Administration/Register.cshtml
+++ b/Edurem/Views/Administration/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Edurem.ViewModels.RegisterViewModel
+﻿@model Edurem.ViewModels.RegisterEditModel
 @{
     ViewData["Title"] = "Зарегистрироваться";
 }
