Завершена реализация формы создания группы

--- a/Edurem/Views/Account/CreateGroup.cshtml
+++ b/Edurem/Views/Account/CreateGroup.cshtml
@@ -18,13 +18,15 @@
         </div>
         <div class="row">
             <div class="col-8">
-                <component>@(await Html.RenderComponentAsync<Edurem.Components.SubjectsDropdown>(RenderMode.ServerPrerendered, new { CurrentUser = Model.CurrentUser }))</component>
+                <component>@(await Html.RenderComponentAsync<Edurem.Components.SubjectsDropdown>(RenderMode.ServerPrerendered, new { CurrentUser = Model.CurrentUser, SubjectId = Model.ViewModel.SubjectId }))</component>
                 <input asp-for="ViewModel.SubjectId" id="SubjectId" hidden />
-
+                <span asp-validation-for="ViewModel.SubjectId" class="text-danger" style="font-weight: bold"></span>
             </div>
         </div>
         <div class="row mt-2">
-            <input class="btn btn-primary" value="Создать" type="submit"/>
+            <div class="col-12">
+                <input class="btn btn-primary" value="Создать" type="submit" />
+            </div>
         </div>
     </div>    
 </form>
