--- a/Edurem/Components/GroupsFilterSearch.razor
+++ b/Edurem/Components/GroupsFilterSearch.razor
@@ -1,4 +1,6 @@
-﻿<div class="col-12">
+﻿@using Edurem.ViewModels;
+
+<div class="col-12">
     <div class="row text-left align-items-center mb-2">
         <input class="col-4 col-md-5 col-xl-3 form-control" placeholder="Название группы" />
         <a href="" @onclick="() => { IsFilterOpened = true; }" @onclick:preventDefault><i class="col-1 fas fa-filter" style="font-size: 20px"></i></a>
@@ -23,6 +25,9 @@
 </MatDialog>
 
 @code {
+
+    [Parameter]
+    public List<GroupViewModel> AvailableGroups { get; set; }
 
     public bool IsFilterOpened { get; set; }
 
