--- a/Edurem/Components/SubjectsDropdown.razor
+++ b/Edurem/Components/SubjectsDropdown.razor
@@ -12,7 +12,14 @@
         <select @onchange="SelectedSubjectChanged" class="form-control">
             @foreach (var subject in AvailableSubjects)
             {
-                <option value="@subject">@subject.Name</option>
+                @if (subject.Id == SubjectId)
+                {
+                    <option value="@subject.Id" selected>@subject.Name</option>
+                }
+                else
+                {
+                    <option value="@subject.Id">@subject.Name</option>
+                }
             }
         </select>
     </div>
@@ -23,33 +30,34 @@
     </div>
 </div>
 
-<MatDialog @bind-IsOpen="@IsAddSubjectOpened">
+<MatDialog @bind-IsOpen="@IsAddSubjectOpened" Class="col-12">
     <MatDialogTitle>
         <div class="col-12 text-left">
-            <p style="font-size: 20px">Добавить дисциплину</p>
+            <p style="font-size: 22px">Добавить дисциплину</p>
         </div>
     </MatDialogTitle>
     <MatDialogContent>
-        <input placeholder="Название дисциплины" @bind-value="SubjectName" />
+        <input class="form-control" placeholder="Название дисциплины" @bind-value="SubjectName" />
     </MatDialogContent>
     <MatDialogActions>
-        <MatButton Class="btn-primary" Unelevated="true" Type="button" OnClick="@(e => { AddSubject(); IsAddSubjectOpened = false;})">Добавить</MatButton>
-        <MatButton Class="btn-danger" Unelevated="true" Type="button" OnClick="@(e => { IsAddSubjectOpened = false; })">Закрыть</MatButton>
+        <button class="btn btn-primary mr-2" type="button" @onclick="(e => { AddSubject(); IsAddSubjectOpened = false;})">Добавить</button>
+        <button class="btn btn-danger" type="button" @onclick="(e => { IsAddSubjectOpened = false; })">Закрыть</button>
     </MatDialogActions>
 </MatDialog>
 
 @code {
 
-        [Parameter]
-        public User CurrentUser { get; set; }
+    [Parameter]
+    public User CurrentUser { get; set; }
 
-        int SubjectId { get; set; }
+    [Parameter]
+    public int SubjectId { get; set; }
 
-        List<Subject> AvailableSubjects { get; set; }
+    List<Subject> AvailableSubjects { get; set; }
 
-        bool IsAddSubjectOpened { get; set; }
+    bool IsAddSubjectOpened { get; set; }
 
-        string SubjectName { get; set; }
+    string SubjectName { get; set; }
 
     protected override void OnInitialized()
     {
@@ -59,7 +67,7 @@
     async Task FillAvailableSubjects()
     {
         AvailableSubjects = new();
-        AvailableSubjects.Add(new Subject() { Name = "-" });
+        AvailableSubjects.Add(new Subject() { Name = "-", Id = 0 });
 
         // Добавляем все имеющиеся дисциплины
         (await GroupService.GetUserSubjects(CurrentUser))
@@ -79,7 +87,8 @@
 
     public Task SelectedSubjectChanged(ChangeEventArgs e)
     {
-        SubjectId = ((Subject)e.Value).Id;
+        var s = e.Value.ToString();
+        SubjectId = int.Parse(s);
 
         return UpdateSubject();
     }
