--- a/Edurem/Views/Account/Groups.cshtml
+++ b/Edurem/Views/Account/Groups.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Edurem.Components;
-@model Edurem.ViewModels.AccountViewModel<Edurem.ViewModels.GroupsListViewModel>
+@model Edurem.ViewModels.AccountViewModel
 
 @{
     ViewData["Title"] = "Группы";
@@ -7,48 +7,17 @@
     Layout = "_AccountLayout";
 }
 
-<div class="row border-bottom mt-2 mb-2">
-    <component type="typeof(Edurem.Components.GroupsFilterSearch)" render-mode="ServerPrerendered" />
-</div>
-<div class="row">
-    <div class="col-12">
-        <div class="row text-left align-items-center mt-2">
-            <input type="button" value="Создать группу" class="col-3 col-md-4 col-xl-2 btn btn-success text-center"
+
+<div class="row mt-2">
+    <div class="col-3 col-md-4 col-xl-2 text-left">
+        <div class="row">
+            <input type="button" value="Создать группу" class="w-100 btn btn-success text-center"
                    onclick="window.location='@Url.Action("CreateGroup", "Account")'" />
         </div>
-        @if (Model.ViewModel.GroupsForView.Count == 0)
-        {
-            <div class="row justify-content-center mt-4">
-                <h3 class="text-muted text-center mt-4">Группы не найдены</h3>
-            </div>
-        }
-        @foreach (var group in Model.ViewModel.GroupsForView)
-        {
-            <div class="row justify-content-center mt-4">
-                <div class="col-12 col-lg-10 card">
-                    <div class="card-header">
-                        <h5>@group.Name</h5>
-                    </div>
-                    <div class="card-body">
-                        <div class="row justify-content-center">
-                            <div class="col-11">
-                                @foreach (var info in group.GroupInfo)
-                                {
-                                    <div class="row">
-                                        <div class="col-4 text-right">
-                                            <p><b>@info.Key</b>:</p>
-                                        </div>
-                                        <div class="col-8 text-left">
-                                            <p>@info.Value</p>
-                                        </div>
-                                    </div>
-                                }
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        }
+    </div>
+</div>
+<div class="row border-bottom mt-2 mb-2">
+    <div class="col-12">
+        <component>@(await Html.RenderComponentAsync<Edurem.Components.GroupsFilterSearch>(RenderMode.ServerPrerendered, new { CurrentUser = Model.CurrentUser }))</component>
     </div>
 </div>
