Создан класс фабрики RepositoryFactory для доступа к Repository

--- a/Edurem/Components/GroupsFilterSearch.razor
+++ b/Edurem/Components/GroupsFilterSearch.razor
@@ -134,6 +134,7 @@
 
     protected override void OnInitialized()
     {
+        GroupName = string.Empty;
         Task.WaitAll(GetGroupViews());
 
         Roles = new()
